# qdock

./: CMakeLists.txt  README.md  install.sh  qdock.desktop
src/: AppLauncher.cpp  AppLauncher.h  ApplicationScanner.cpp  ApplicationScanner.h  DockAnimation.cpp  DockAnimation.h  DockConfig.h  DockItem.cpp  DockItem.h  DockWindow.cpp  DockWindow.h  SeparatorItem.cpp  SeparatorItem.h  SettingsDialog.cpp  SettingsDialog.h  SystemTrayArea.cpp  SystemTrayArea.h  TrashItem.cpp  TrashItem.h  main.cpp  x11_helper.h  x11util.cpp  x11util.h
